infrastructure/modules/kubernetes/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  # namespace not needed, since GatewayClass is cluster scoped
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
