infrastructure/modules/kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${app_name}
  namespace: ${namespace_name}
  labels:
    app: ${app_name}
spec:
  serviceName: ${app_name}
  replicas: ${replica_count}
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0 # only pods with ordinal >= 0 will be updated (thus all).
  selector:
    matchLabels: # so service.yaml matches this statefulset.yaml
      app: ${app_name}
  template:
    metadata:
      labels:
        app: ${app_name}
      annotations:
        kubectl.kubernetes.io/restartedAt: ${rollout_trigger}
    spec:
      restartPolicy: ${restart}
%{ if is_local_deployment == false }
      imagePullSecrets:
        - name: ${image_pull_secret_name}
%{ endif }
%{ if length(depends_on) > 0 }
%{ for dep_app_name in depends_on ~}
        - name: wait-for-${dep_app_name}
          image: busybox:1.36
%{ if is_local_deployment == true }
          imagePullPolicy: Never
%{ else }
          imagePullPolicy: Always
%{ endif }
          command: ['sh', '-c', 'until wget -qO- ${dep_app_name}.${namespace_name}.svc.cluster.local > /dev/null; do echo "Waiting for ${dep_app_name} service..."; sleep 5; done']
%{ endfor ~}
%{ endif ~}
      containers:
        - name: ${app_name}
          image: ${image_name}:${image_tag}
%{ if length(app_env) > 0 }
%{ for key, value in app_env ~}
          - name: ${key}
            value: "${value}"
%{ endfor ~}
%{ endif }
        ports:
          - containerPort: ${target_port}
        # Resource requests and limits
        resources:
          requests:
            cpu: ${request_cpu}
            memory: ${request_memory}
          limits:
            cpu: ${limit_cpu}
            memory: ${limit_memory}

%{ if liveness_probe_config.path != null || liveness_probe_config.command != null }
        livenessProbe:
%{ if liveness_probe_config.path != null } # HTTP GET Probe
          httpGet:
            path: ${liveness_probe_config.path}
            port: ${target_port}
%{ else } # EXEC Command Probe
          exec:
            command: ${jsonencode(liveness_probe_config.command)}
%{ endif }
          initialDelaySeconds: ${liveness_probe_config.initial_delay_seconds}
          periodSeconds: ${liveness_probe_config.period_seconds}
          timeoutSeconds: ${liveness_probe_config.timeout_seconds}
          failureThreshold: ${liveness_probe_config.failure_threshold}
%{ endif }

%{ if readiness_probe_config.path != null || readiness_probe_config.command != null }
        readinessProbe:
%{ if readiness_probe_config.path != null } # HTTP GET Probe
          httpGet:
            path: ${readiness_probe_config.path}
            port: ${target_port}
%{ else } # EXEC Command Probe
          exec:
            command: ${jsonencode(readiness_probe_config.command)}
%{ endif }
          initialDelaySeconds: ${readiness_probe_config.initial_delay_seconds}
          periodSeconds: ${readiness_probe_config.period_seconds}
          timeoutSeconds: ${readiness_probe_config.timeout_seconds}
          successThreshold: ${readiness_probe_config.success_threshold}
          failureThreshold: ${readiness_probe_config.failure_threshold}
%{ endif }

        # Dynamically injects all defined volume mounts
        volumeMounts:
%{ for name, volume in data_volumes }
        - name: ${volume}
          mountPath: ${volume.mount_path}
%{ endfor }

  # Creates a PVC for each replica, based on the defined data_volumes map
  volumeClaimTemplates:
  %{ for name, volume in data_volumes }
  - metadata:
      name: ${volume.name}
    spec:
      storageClassName: ${volume.storage_class_name}
      accessModes: ["${volume.access_mode}"] # e.g., ReadWriteOnce
      resources:
        requests:
          storage: ${volume.storage_request} # e.g., 10Gi
  %{ endfor }
