infrastructure/modules/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${project_namespace_name}-gateway
  namespace: ${project_namespace_name}
spec:
  gatewayClassName: envoy-gateway # nginx
  listeners:
    - name: http
      protocol: HTTP
      port: ${ingress_port}
      hostname: ${ingress_host}
      allowedRoutes:
        namespaces:
          from: All
      timeouts:
        read: 18000s
        send: 18000s
        connect: 18000s
